@@ -14101,14 +14101,21 @@ fold_indirect_ref_1 (location_t loc, tree type, tree op0)
 		   && type == TREE_TYPE (op00type))
 	    {
 	      tree type_domain = TYPE_DOMAIN (op00type);
-	      tree min_val = size_zero_node;
-	      if (type_domain && TYPE_MIN_VALUE (type_domain))
-		min_val = TYPE_MIN_VALUE (type_domain);
-	      op01 = size_binop_loc (loc, EXACT_DIV_EXPR, op01,
-				     TYPE_SIZE_UNIT (type));
-	      op01 = size_binop_loc (loc, PLUS_EXPR, op01, min_val);
-	      return build4_loc (loc, ARRAY_REF, type, op00, op01,
-				 NULL_TREE, NULL_TREE);
+	      tree min = TYPE_MIN_VALUE (type_domain);
+	      if (min && TREE_CODE (min) == INTEGER_CST)
+		{
+		  offset_int off = wi::to_offset (op01);
+		  offset_int el_sz = wi::to_offset (TYPE_SIZE_UNIT (type));
+		  offset_int remainder;
+		  off = wi::divmod_trunc (off, el_sz, SIGNED, &remainder);
+		  if (remainder == 0)
+		    {
+		      off = off + wi::to_offset (min);
+		      op01 = wide_int_to_tree (sizetype, off);
+		      return build4_loc (loc, ARRAY_REF, type, op00, op01,
+					 NULL_TREE, NULL_TREE);
+		    }
+		}
 	    }
 	}
     }
